--- a/main.css
+++ b/main.css
@@ -1,11 +1,10 @@
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    text-align: center;
+  margin:0;
+  padding:0;
 }
 nav,
 footer {
@@ -23,24 +22,34 @@ nav {
 }
 nav ul {
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-end;
+  text-align: center;
+  padding-right: 10px;
 }
 ul li {
   list-style: none;
-  text-align: right;
-  display: inline-block;
-  padding: 5px;
   margin-right: 5px;
+ 
 }
-ul h1 {
+header h1 {
   text-align: left;
+  padding-left: 40px;
+  padding-top: 30px;
+}
+main h2 {
+  padding-left: 40px;
 }
 
+footer h3 {
+  padding-left: 40px;
+}
 
 
 header {
+  display: inline-block;
   padding: 10% 0;
 }
+
 
 section {
   min-height: 100px;
@@ -51,15 +60,35 @@ section {
 section:nth-child(even) {
   background-color: #ddd;
 }
+@media screen and (min-width:481px)  {
 
-@media screen and (min-width:300px) and (max-width:780px) {
-  .header {
+.hamburger{
+  display: none;
+}
+}
+@media screen and (min-width:240px) and (max-width:480px) {
+  header{
+    display: flex;
+    flex-direction: column;
+    flex: 0 0;
+    align-items: space-between;
+    text-align: center;
+  }
+  .nav {
     display: inline-block;
-    color: white;
-    border: 1px;
-    width: 100%;
     text-align: end;
+    color:white;
+    border: 1px;
     background: gray;
-    height: 18px;
+    width: 100%;
+    height: 20px;
+  }
+  nav ul {
+    list-style-type: none;
+    display: none;
+  }
+  nav .hamburger {
+    padding-right: 5px;
+    text-align: end;
   }
 }
